--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "studyhub",
+  "name": "hawk",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "dev:api": "node server/index.js",
+    "dev:interview": "cd interviewer && python3 server.py",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "validate": "node scripts/validate-env.js",
     "setup:check": "node scripts/validate-env.js",
+    "setup:interview": "bash scripts/setup-interview-service.sh",
     "vercel-build": "npm run build"
   },
   "dependencies": {
