--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev:api": "node server/index.js",
-    "dev:interview": "cd interviewer && python3 server.py",
+    "dev:interview": "cd interviewer && source venv/bin/activate && python3 server.py",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
